# UAV-Controller-Isaac-PX4

iris_controller/: package.xml  setup.cfg  setup.py
iris_controller/iris_controller/: control_panel.py  controller_node.py
iris_controller/launch/: iris_control.launch.py
px4_offboard_control/: README.md  package.xml  setup.cfg  setup.py
px4_offboard_control/launch/: offboard.launch.py  offboard_with_mode_switch.launch.py
px4_offboard_control/px4_offboard_control/: __init__.py  mode_switch_node.py  offboard_node.py
uav_position_controller/: package.xml  setup.cfg  setup.py
uav_position_controller/launch/: multi_drone.launch.py  position_control.launch.py
uav_position_controller/uav_position_controller/: control_panel.py  controller_node.py
